Header, Footer, and Navigation features added
Also added a logo option to the header and added the header and footer to existing pages.

--- a/assets/snippets/remote.html
+++ b/assets/snippets/remote.html
@@ -12,6 +12,11 @@
   <body>
     <header>
       <h1>Header</h1>
+      <div class="logo">
+        <a href="../../index.html">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 796"><defs><style>.cls-1{fill:#01232d;}.cls-2{fill:#013342;}</style></defs><title>delta-design-system-logo</title><polygon id="right-side" class="cls-1" points="512 796 1024 796 512 0 512 796"/><polygon id="left-side" class="cls-2" points="0 796 512 796 512 0 0 796"/></svg>
+        </a>
+      </div>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
           <svg class="menu-toggle-open" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M3 4h18v2H3V4zm0 7h18v2H3v-2zm0 7h18v2H3v-2z"/></svg>
@@ -28,8 +33,10 @@
       </nav>
     </header>
     <main>
-      <section class="row wide">
-      </section>
+      <article>
+        <section class="row wide">
+        </section>
+      </article>
     </main>
     <footer>
       <h1>Footer</h1>
