--- a/atoms/buttons/buttons.html
+++ b/atoms/buttons/buttons.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Layout | Delta Design System</title>
+    <title>Buttons | Delta Design System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
@@ -36,93 +36,72 @@
       <article>
         <section class="row wide">
           <div class="column">
-            <h1 class="title">Layout</h1>
-            <p>The goal of content is to be discoverable and easy to absorb, and a site's or application's layout should not complicate that process.</p>
-            <p>The Delta Design System is built on a <a href="https://alistapart.com/article/responsive-web-design/" target="_blank">responsive design</a> framework using <a href="https://developer.mozilla.org/en-US/docs/Glossary/Flexbox" target="_blank">flexbox</a>.</p>
-            <p>The parent container in the framework is a <code>.row</code>. Each <code>.row</code> can be assigned an additional classes that define how its child columns occupy the horizontal space of the row. On screens smaller than 48rem wide, all columns in the <code>.row</code> span the full width of the browser and stack vertically. On screens wider than 48rem:</p>
+            <h1 class="title">Buttons</h1>
+            <p>The &lt;button&gt; element represents a clickable button, which can be used in forms or anywhere in a document that needs simple, standard button functionality.</p>
+            <p><cite><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button" target="_blank">&lt;button&gt;</a> by <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button$history" target="_blank">Mozilla Contributors</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/2.5/" target="_blank">CC-BY-SA 2.5</a>.</cite></p>
+            <p>There are lots and lots and lots of rules for buttons, and there are also lots and lots of options for buttons. It's worth reading up on the dos and don'ts of buttons in order to ensure your buttons will function as expected by all users. Here are some good places to start:</p>
             <ul>
-              <li><code>class="row wide"</code> each <code>.column</code> child will span the full width of the browser window.</li>
-              <li><code>class="row fifty"</code> each <code>.column</code> child will span 50% of the width of the browser window.</li>
-              <li><code>class="row golden left"</code> the first <code>.column</code> will span 62% of the width of the browser window and the second <code>.column</code> will span 38%.</li>
-              <li><code>class="row golden right"</code> the first <code>.column</code> will span 38% of the width of the browser window and the second <code>.column</code> will span 62%.</li>
-              <li><code>class="row thirds"</code> each <code>.column</code> child will span approximately 33% of the width of the browser window.</li>
-              <li><code>class="row fourths"</code> each <code>.column</code> child will span approximately 50% of the width of the browser window on screens wider than 48rem but smaller than 64rem. On screens wider than 64rem, each <code>.column</code> child will span approximately 25% of the width of the browser window.</li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/button" target="_blank">MDN web docs</a></li>
+              <li><a href="https://a11y-style-guide.com/style-guide/section-general.html#kssref-general-buttons" target="_blank">A11Y Style Guide</a></li>
+              <li><a href="https://www.w3schools.com/tags/tag_button.asp" target="_blank">W3 Schools</a></li>
             </ul>
+            <p>Whenever semantically appropriate, anything that functions as a button should be coded as a <code>&lt;button&gt;</code>. However, the Delta Design System does provide CSS classes to make any <code>&lt;span&gt;</code> or <code>&lt;a href&gt;</code> element look like a button.</p>
+            <p>The Delta Design System's normal button uses the <code>$primary</code> color application and handles both the default button state, as well as the <code>:hover</code> and <code>:focus</code> states.</p>
           </div>
         </section>
         <section class="row wide">
-          <h1>Layout Examples</h1>
-          <div class="row fence wide">
-            <h2>Wide Row</h2>
+          <h2>Button Examples</h2>
+          <div class="row fence fifty">
             <div class="column">
-              <p>Columns in a <code>.wide</code> row occupy 100% of the available width on screens of all widths. More than one <code>.wide</code> column in a row will stack themselves vertically.</p>
+              <h3>Primary Buttons</h3>
+              <button type="button">Button</button>
+            </div>
+            <div class="column">
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot;&gt;Button&lt;/button&gt;</code></pre>
+              </figure>
             </div>
           </div>
           <div class="row fence fifty">
-            <h2>Fifty Fifty Row</h2>
             <div class="column">
-              <h3>Left Column</h3>
-              <p>Columns in a <code>.fifty</code> row occupy 50% of the available width on screens wider than 48rem.</p>
+              <h3>Secondary Buttons</h3>
+              <p>Add a <code>.secondary</code> class to the button to use the design system's secondary color application.</p>
+              <button type="button" class="secondary">Button</button>
             </div>
             <div class="column">
-              <h3>Right Column</h3>
-              <p>Columns in a <code>.fifty</code> row occupy 50% of the available width on screens wider than 48rem.</p>
-            </div>
-          </div>
-          <div class="row fence golden left">
-            <h2>Golden Left Row</h2>
-            <div class="column">
-              <h3>Left Column</h3>
-              <p>The left column in a golden left row occupies 62% of the available width on screens wider than 48rem.</p>
-            </div>
-            <div class="column">
-              <h3>Right Column</h3>
-              <p>The right column in a golden left row occupies 38% of the available width on screens wider than 48rem.</p>
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot; class=&quot;secondary&quot;&gt;Button&lt;/button&gt;</code></pre>
+              </figure>
             </div>
           </div>
-          <div class="row fence golden right">
-            <h2>Golden Right Row</h2>
+          <div class="row fence fifty">
             <div class="column">
-              <h3>Left Column</h3>
-              <p>The left column in a golden right row occupies 62% of the available width on screens wider than 48rem.</p>
+              <h3>Reverse Buttons</h3>
+              <p>Though we'd prefer you keep it simple and not use too many button styles, you can also add a <code>.reverse</code> class to the button to create a button with a white background. This option works for both the primary and secondary colors.</p>
+              <button type="button" class="reverse">Button</button>
+              <button type="button" class="reverse secondary">Button</button>
             </div>
             <div class="column">
-              <h3>Right Column</h3>
-              <p>The right column in a golden right row occupies 38% of the available width on screens wider than 48rem.</p>
-            </div>
-          </div>
-          <div class="row fence thirds">
-            <h2>Thirds Row</h2>
-            <div class="column">
-              <h3>First Column</h3>
-              <p>The first column in a <code>.thirds</code> row occupies 33% of the available width on screens wider than 48rem.</p>
-            </div>
-            <div class="column">
-              <h3>Second Column</h3>
-              <p>The second column in a <code>.thirds</code> row occupies 33% of the available width on screens wider than 48rem.</p>
-            </div>
-            <div class="column">
-              <h3>Third Column</h3>
-              <p>The third column in a <code>.thirds</code> row occupies 33% of the available width on screens wider than 48rem.</p>
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot; class=&quot;reverse&quot;&gt;Button&lt;/button&gt;
+&lt;button type=&quot;button&quot; class=&quot;reverse secondary&quot;&gt;Button&lt;/button&gt;</code></pre>
+              </figure>
             </div>
           </div>
-          <div class="row fence fourths">
-            <h2>Fourths Row</h2>
+          <div class="row fence fifty">
             <div class="column">
-              <h3>First Column</h3>
-              <p>The first column in a <code>.fourths</code> row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
+              <h3>Buttons with Icons</h3>
+              <p>Lots of situations these days call for a button with an icon. Just add the desired svg code to the button label and you should be all set.</p>
+              <button type="button">Button<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></button>
             </div>
             <div class="column">
-              <h3>Second Column</h3>
-              <p>The second column in a <code>.fourths</code> row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
-            </div>
-            <div class="column">
-              <h3>Third Column</h3>
-              <p>The third column in a <code>.fourths</code> row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
-            </div>
-            <div class="column">
-              <h3>Fourth Column</h3>
-              <p>The fourth column in a <code>.fourths</code> row occupies 50% of the available width on screens wider than 48rem and 25% of the available width on screens wider than 64rem.</p>
+              <figure>
+                <figcaption>html</figcaption>
+<pre><code>&lt;button type=&quot;button&quot;&gt;Button&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; width=&quot;24&quot; height=&quot;24&quot;&gt;&lt;path fill=&quot;none&quot; d=&quot;M0 0h24v24H0z&quot;/&gt;&lt;path d=&quot;M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z&quot;/&gt;&lt;/svg&gt;&lt;/button&gt;</code></pre>
+              </figure>
             </div>
           </div>
         </section>
