--- a/atoms/images/images.html
+++ b/atoms/images/images.html
@@ -55,13 +55,17 @@
                 <figcaption>html</figcaption>
 <pre style="white-space: normal;"><code>&lt;img src=&quot;../../assets/images/sample-bridge-2x.jpg&quot; srcset=&quot;../../assets/images/sample-bridge-1x.jpg 1x, ../../assets/images/sample-bridge-2x.jpg 2x&quot; alt=&quot;Example of horizontal golden aspect ratio image&quot;&gt;</code></pre>
               </figure>
-              <p>Adding a <code>srcset</code> attribute to our <code>&lt;img&gt;</code> element enables us to present a high-resolution image only to retina devices and fall back to the low-resolution version for standard screens. The <code>srcset</code> attribute points to a list of alternative image files. The <code>1x</code> tells the browser to display the lower-resolution image on standard-resolution screens. The 2x means that the higher-resolution image is used for retina screens. Older browsers that don’t understand <code>srcset</code> fall back to the src attribute.</p>
-            </div>
+            </div>            
             <div class="column">
               <figure>
                 <img src="../../assets/images/mountain-2-2x.jpg" srcset="../../assets/images/mountain-2-1x.jpg 1x, ../../assets/images/mountain-2-2x.jpg 2x" alt="Example of vertical golden aspect ratio image">
                 <figcaption><a href="https://www.stockio.com/free-photo/mountain-ryan-winterbotham-2" target="_blank">Mountain by Ryan Winterbotham</a></figcaption>
               </figure>
+            </div>
+          </div>
+          <div class="row wide">
+            <div class="column">
+              <p>Adding a <code>srcset</code> attribute to our <code>&lt;img&gt;</code> element enables us to present a high-resolution image only to retina devices and fall back to the low-resolution version for standard screens. The <code>srcset</code> attribute points to a list of alternative image files. The <code>1x</code> tells the browser to display the lower-resolution image on standard-resolution screens. The 2x means that the higher-resolution image is used for retina screens. Older browsers that don’t understand <code>srcset</code> fall back to the src attribute.</p>
             </div>
           </div>
           <div class="row wide">
