Moved 'h' tags into column divs
This is to set up for vertical alignment options (so that the 'h' tags aren't just hanging out at the top).

--- a/atoms/forms/forms.html
+++ b/atoms/forms/forms.html
@@ -36,7 +36,7 @@
       <article>
         <section class="row wide">
           <div class="column">
-            <h1 class="title">Inputs</h1>
+            <h1 class="title">Forms and Inputs</h1>
             <p>The &lt;input&gt; element is used to create interactive controls for forms in order to accept or retrieve data from/for the user.</p>
             <p>The function or value of an <code>&lt;input&gt;</code> depends on the value of its 'type attribute'. For more information on <code>&lt;input&gt;</code> values, please see the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input#Form_<input>_types" target="_blank">MDN web docs</a>.</p>
             <p>As with other elements in the Delta Design System, we try to be as semantic and use the fewest elements as possible to create our forms. We use css transitions to move the <code>&lt;label&gt;</code> out of place and expose the <code>:placeholder</code> when the <code>&lt;input&gt;</code> is in the <code>:focus</code> state.</p>
@@ -46,8 +46,8 @@
         <section class="row wide">
           <h2>Input Examples</h2>
           <div class="row fence fifty">
-            <h3>Text Inputs</h3>
             <div class="column">
+              <h3>Text Inputs</h3>
               <fieldset>
                 <input type="text" name="text-input" id="text-input" placeholder="Placeholder">
                 <label for="text-input">Label</label>
@@ -72,8 +72,8 @@
             </div>
           </div>
           <div class="row fence fifty">
-            <h3>Password Inputs</h3>
             <div class="column">
+              <h3>Password Inputs</h3>
               <fieldset>
                 <input type="password" name="password" id="password" placeholder="Placeholder" autocomplete="on">
                 <label for="password">Label</label>
@@ -106,8 +106,8 @@
             </div>
           </div>
           <div class="row fence fifty">
-            <h3>Select Inputs</h3>
             <div class="column">
+              <h3>Select Inputs</h3>
               <fieldset>
                 <select name="select" id="select">
                   <option value="0">This is a select input</option>
@@ -150,8 +150,8 @@
             </div>
           </div>
           <div class="row fence fifty">
-            <h3>Checkboxes</h3>
             <div class="column">
+              <h3>Checkboxes</h3>
               <fieldset class="checkbox">
                 <label for="checkbox" class="checkbox">Label<input type="checkbox" name="checkbox" id="checkbox"></label>
                 <div class="message">
@@ -176,8 +176,8 @@
             </div>
           </div>
           <div class="row fence fifty">
-            <h3>Radio Buttons</h3>
             <div class="column">
+              <h3>Radio Buttons</h3>
               <fieldset class="radio">
                 <label for="radio-one" class="radio">Radio label one<input type="radio" name="radio" id="radio-one"></label>
                 <label for="radio-two" class="radio">Radio label two<input type="radio" name="radio" id="radio-two"></label>
@@ -202,8 +202,8 @@
             </div>
           </div>
           <div class="row fence fifty">
-            <h3>Toggle Switches</h3>
             <div class="column">
+              <h3>Toggle Switches</h3>
               <fieldset class="toggle">
                 <label for="toggle" class="toggle">Label<input type="checkbox" name="toggle" class="toggle" id="toggle"></label>
                 <div class="message">
@@ -226,8 +226,8 @@
             </div>
           </div>
           <div class="row fence fifty">
-            <h3>Buttons</h3>
             <div class="column">
+              <h3>Buttons</h3>
               <fieldset class="button-input">
                 <input type="button" name="button" id="button" class="button" value="Button" role="button" aria-pressed="false">
               </fieldset>
