Added Banners page

--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Molecules | Delta Design System</title>
+    <title>Downloads | Delta Design System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
@@ -25,10 +25,10 @@
         <ul>
           <li><a href="../index.html">Overview</a></li>
           <li><a href="../atoms/atoms.html">Atoms</a></li>
-          <li>Molecules</li>
+          <li><a href="../molecules/molecules.html">Molecules</a></li>
           <li><a href="../organisms/organisms.html">Organisms</a></li>
           <li><a href="../style/style.html">Style</a></li>
-          <li><a href="../downloads/downloads.html">Downloads</a></li>
+          <li>Downloads</li>
         </ul>
       </nav>
     </header>
@@ -36,65 +36,13 @@
       <article>
         <section class="row wide">
           <div class="column">
-            <h1 class="title">Molecules</h1>
-            <p>In interfaces, molecules are relatively simple groups of UI elements functioning together as a unit. For example, a form label, search input, and button can join together to create a search form molecule.</p>
-            <p><cite><a href="http://atomicdesign.bradfrost.com/chapter-2/#molecules">Molecules</a> from <a href="http://atomicdesign.bradfrost.com/" target="_blank">Atomic Design</a> by <a href="https://bradfrost.com" target="_blank">Brad Frost</a></cite></p>
+            <h1 class="title">Downloads</h1>
+            <p>Here are some additional things that help to complete a full design system kit.</p>
           </div>
-        </section>
-        <section class="row wide">
-          <h2>Delta Design System Molecules</h2>
           <div class="card-row">
             <div class="card">
               <div class="text">
-                <h3>Accordions</h3>
-                <p>Coming soon</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Banners</h3>
-                <p><a href="banners/banners.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Blockquotes</h3>
-                <p><a href="blockquotes/blockquotes.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Cards</h3>
-                <p><a href="cards/cards.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Forms</h3>
-                <p>Coming soon</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Media Grids</h3>
-                <p>Coming soon</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Messaging</h3>
-                <p>Coming soon</p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Navigation</h3>
-                <p><a href="navigation/navigation.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="text">
-                <h3>Search</h3>
+                <h3>Sketch</h3>
                 <p>Coming soon</p>
               </div>
             </div>
@@ -109,10 +57,10 @@
           <ul>
             <li><a href="../index.html">Overview</a></li>
             <li><a href="../atoms/atoms.html">Atoms</a></li>
-            <li>Molecules</li>
+            <li><a href="../molecules/molecules.html">Molecules</a></li>
             <li><a href="../organisms/organisms.html">Organisms</a></li>
             <li><a href="../style/style.html">Style</a></li>
-            <li><a href="../downloads/downloads.html">Downloads</a></li>
+            <li>Downloads</li>
           </ul>
         </nav>
         <section class="meta-content column">
