--- a/molecules/cards/cards.html
+++ b/molecules/cards/cards.html
@@ -57,6 +57,7 @@
                 <p><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
+<!--
             <div class="card">
               <div class="text">
                 <h3>Card Headline</h3>
@@ -71,6 +72,7 @@
                 <p><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
+-->
           </div>
         </section>
         <section class="row wide">
@@ -83,9 +85,11 @@
               <div class="text">
                 <h3>Card Headline</h3>
                 <p>Cards are very good at conveying small bits of information, and cards are convenient because they require little markup to use effectively.</p>
+                <p><cite>Photo: <a href="https://www.stockio.com/free-photo/field-konrad-marx" target="_blank">Field</a> by Konrad Marx</cite></p>
                 <p><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
+<!--
             <div class="card">
               <figure>
                 <img src="../../assets/images/sea-2x.jpg" srcset="../../assets/images/sea-1x.jpg 1x, ../../assets/images/sea-2x.jpg 2x" alt="Example of image used in card layout">
@@ -106,6 +110,7 @@
                 <p><a href="#!">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
               </div>
             </div>
+-->
           </div>
         </section>
       </article>
