Updates to Blockquotes
Added alignment options and added a little padding-top to the 'cite' portion of 'blockquote'

--- a/molecules/blockquotes/blockquotes.html
+++ b/molecules/blockquotes/blockquotes.html
@@ -58,6 +58,7 @@
                 <li>We use <code>p</code> tags inside the <code>&lt;blockquote&gt;</code> tag.</li>
                 <li>We do not, however, use a <code>&lt;footer&gt;</code> tag in our blockquote.</li>
               </ul>
+              <p><code>&lt;blockquote&gt;</code> elements are left-aligned by default, but you can add a <code>.center</code> or <code>.right</code> class to change the horizontal alignment to suit your needs.</p>
               <figure>
                 <figcaption>html</figcaption>
 <pre><code>&lt;blockquote cite=&quot;https://alistapart.com/article/responsive-web-design/&quot;&gt;
