--- a/style/colors/colors.html
+++ b/style/colors/colors.html
@@ -52,7 +52,7 @@
         <section class="row wide">
           <h2>Color Styles</h2>
           <p>Here's how we're currently declaring colors in the Delta Design System:</p>
-          <div class="row wide">
+          <div class="row wide" style="padding: 2rem 0;">
             <div class="column">
               <h3>Global Colors</h3>
               <div class="color-card-row">
