Media Grid Items page complete

--- a/molecules/banners/banners.html
+++ b/molecules/banners/banners.html
@@ -47,7 +47,7 @@
             </ul>
           </div>
         </section>
-        <div class="banner tall right bg-photo light center" style="background-image: url(../../assets/images/london.jpg);">
+        <div class="banner tall right bg-photo light center" style="background-image: url(../../assets/images/london-2x.jpg);">
           <div class="overlay" style="opacity: 0;"></div>
           <div class="text">
             <h1>Tall Photo Banner</h1>
